content: update colors table url

--- a/SBSR_2025/classification-of-raster-data-cubes.ipynb
+++ b/SBSR_2025/classification-of-raster-data-cubes.ipynb
@@ -581,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "color_table <- readRDS(\"~/sbsr-2025/data/raw/colors/colors_lem.rds\")"
+    "color_table <- readRDS(url(\"https://github.com/e-sensing/sitsnotebooks/raw/refs/heads/main/SBSR_2025/data/raw/colors/colors_lem.rds\"))"
    ]
   },
   {
